LabasCode/multus/16-kind-k8s-base-networkpolicy/cc.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-k8s-apiserver-access
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - podSelector: {}
      namespaceSelector: {}
  - ports:
      - protocol: TCP
        #port: 6443
